<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_name"
        />
    <EditText
        android:id="@+id/etFirst_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/First_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Last_name"
        />
    <EditText
        android:id="@+id/etLast_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="text"
        android:hint="@string/Last_name"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email_address"
        />
    <EditText
        android:id="@+id/etEmail_address"
        android:hint="@string/Email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textEmailAddress"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        />
    <EditText
        android:id="@+id/etPassword"
        android:hint="@string/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/bRegister"
        android:text="@string/Register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="send_data"/>



</LinearLayout>