<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/back4"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_image"
            android:layout_marginTop="30dp" />

        <ImageView
            android:id="@+id/full_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture"
            android:layout_margin="5dp"
            android:background="@drawable/pic_border" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cropped_image_reading"/>

        <ImageView
            android:id="@+id/picture_crop_reading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/picture"
            android:layout_margin="5dp"
            android:background="@drawable/pic_border" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/capture_btn"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/capture"
                android:layout_weight="0.43"
                android:background="#cc2121"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="5dp" />

            <Button
                android:id="@+id/manual_enter"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.57"
                android:text="@string/enter_manually"
                android:background="#cc2121"
                android:layout_marginTop="10dp"
                android:textColor="#ffffff"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>

        <Button
            android:id="@+id/save_send_btn"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/save_send"
            android:background="#cc2121"
            android:layout_marginTop="10dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>

</ScrollView>