<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/back4">

    <ImageView
        android:layout_width="238dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:src="@drawable/profile"
        android:layout_weight="0.29" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/First_name"
        android:layout_marginTop="70dp"
        android:textColor="#ffffff" />
    <TextView
        android:id="@+id/etFirst_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Last_name"
        android:textColor="#ffffff" />
    <TextView
        android:id="@+id/etLast_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="20dp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail_id"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/etEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:textSize="20dp"
        android:layout_marginTop="5dp" />



    <Button
        android:id="@+id/bLogout"
        android:text="@string/Logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="go_login"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="#cc2121"/>



</LinearLayout>